[tool.poetry]
name = "audience_data_generator"
version = "0.1.0"
description = "Generate Audience Dummy data"
authors = ["Aki Ariga <ariga@treasure-data.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pytd = "^1.2"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
pytest = "^5.4.1"
black = "^19.10b0"
flake8 = "^3.7.9"

[tool.poetry.scripts]
audience_generator = "audience_data_generator.generator:create_dummy_data"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
