[project]
name = "audience_data_generator"
version = "0.2.0"
description = "Generate Audience Dummy data"
authors = [{ name ="Aki Ariga", email= "ariga@treasure-data.com" }]
readme = "README.md"

requires-python = ">=3.8"

dependencies = [
    "pytd>=1.5,<2",
    "click>=7.1.1,<8",
    "numpy>=1.22,<2",
    "setuptools>=70.1.0",
]


[tool.rye]
managed = true
dev-dependencies = [
  "pytest>=5.4.1,<6",
]


[project.scripts]
audience_generator = "audience_data_generator.generator:create_dummy_data"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
